--- a/templates/index.html
+++ b/templates/index.html
@@ -132,7 +132,7 @@
 <body>
 
     <header>
-        <h1>Markdown Converter & Summarizer</h1>
+        <h1>Ram's Markdown Converter & Summarizer</h1>
     </header>
 
     <div class="container">
